--- a/LapinCouvert/LapinCouvert/Views/Inventaire/Index.cshtml
+++ b/LapinCouvert/LapinCouvert/Views/Inventaire/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LapinCouvertMVC.ViewModels.InventaireViewModel
+﻿@model LapinCouvertMVC.ViewModels.ProduitsViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -29,30 +29,30 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Inventaire.FirstOrDefault().Nom)
+                @Html.DisplayNameFor(model => model.Produits.FirstOrDefault().Nom)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Inventaire.FirstOrDefault().PrixVendu)
+                @Html.DisplayNameFor(model => model.Produits.FirstOrDefault().PrixVendu)
             </th>
             
             <th>
-                @Html.DisplayNameFor(model => model.Inventaire.FirstOrDefault().Image)
+                @Html.DisplayNameFor(model => model.Produits.FirstOrDefault().Image)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Inventaire.FirstOrDefault().Quantite)
+                @Html.DisplayNameFor(model => model.Produits.FirstOrDefault().Quantite)
             </th>
            
             <th>
-                @Html.DisplayNameFor(model => model.Inventaire.FirstOrDefault().Disponible)
+                @Html.DisplayNameFor(model => model.Produits.FirstOrDefault().Disponible)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Inventaire.FirstOrDefault().Categorie)
+                @Html.DisplayNameFor(model => model.Produits.FirstOrDefault().Categorie)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Inventaire) {
+@foreach (var item in Model.Produits) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Nom)
@@ -85,49 +85,26 @@
 </table>
 
 <form id="formSelectionPage" asp-action="ChangerPage" method="get">
-    <input asp-for="SelectedPageIndex" type="hidden" id="pageIndex" class="form-control" readonly />
+    <input asp-for="PageSelectionneeIndex" type="hidden" id="pageIndex" class="form-control" readonly />
 </form>
 
 <div id="content-pagination">
     <nav>
         <ul class="pagination">
-            @if (Model.SelectedPageIndex != 0)
+            @if (Model.PageSelectionneeIndex != 0)
             {
-                <li class="page-item"><span data-page-id="@(Model.SelectedPageIndex - 1)" class="page-link">Précédent</span></li>
+                <li class="page-item"><span data-page-id="@(Model.PageSelectionneeIndex - 1)" class="page-link">Précédent</span></li>
             }
             @for (int i = 1; i <= Model.NombrePageTotale; i++)
             {
 
-                <li class="page-item @(i== Model.SelectedPageIndex + 1 ? "active" : " ")"><span class="page-link" data-page-id="@(i - 1)">@i</span></li>
+                <li class="page-item @(i== Model.PageSelectionneeIndex + 1 ? "active" : " ")"><span class="page-link" data-page-id="@(i - 1)">@i</span></li>
             }
-            @if (Model.SelectedPageIndex != Model.NombrePageTotale - 1)
+            @if (Model.PageSelectionneeIndex != Model.NombrePageTotale - 1)
             {
-                <li class="page-item"><span class="page-link" data-page-id="@(Model.SelectedPageIndex + 1)">Suivant</span></li>
+                <li class="page-item"><span class="page-link" data-page-id="@(Model.PageSelectionneeIndex + 1)">Suivant</span></li>
             }
 
         </ul>
-       @*  <ul class="pagination">
-            @if (Model.SelectedPageIndex != 0)
-            {
-                <li class="page-item"><span data-page-id="@(Model.SelectedPageIndex - 1)" class="page-link">Précédent</span></li>
-            }
-            @for (int i = 0; i < Model.Inventaire.Count / 3; i++)
-            {
-                @if (i == Model.SelectedPageIndex)
-                {
-                    <li class="page-item active"><span class="page-link" data-page-id="@i">@(i + 1)</span></li>
-                }
-                else
-                {
-                    <li class="page-item">
-                        <span class="page-link" data-page-id="@i">@(i + 1)</span>
-                    </li>
-                }
-            }
-            @if (Model.SelectedPageIndex != Model.Inventaire.Count / 3)
-            {
-                <li class="page-item"><span class="page-link" data-page-id="@(Model.SelectedPageIndex + 1)">Prochain</span></li>
-            }
-        </ul> *@
     </nav>
 </div>
