--- a/LapinCouvert/LapinCouvert/Views/Inventaire/Create.cshtml
+++ b/LapinCouvert/LapinCouvert/Views/Inventaire/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nom" class="control-label"></label>
@@ -28,10 +28,11 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
+                <label class="control-label" for="Image">Image</label>
+                <input type="file" name="Image" class="form-control" accept=".png, .jpg, .jpeg" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Quantite" class="control-label"></label>
                 <input asp-for="Quantite" class="form-control" />
